Added forms and working! Going to isolate forms to Model and pull them in programmatically

--- a/complicationsapp/complicationsapp/Base.lproj/Main.storyboard
+++ b/complicationsapp/complicationsapp/Base.lproj/Main.storyboard
@@ -293,7 +293,7 @@
                                                     <constraint firstAttribute="height" constant="30" id="HXm-Mg-Y2m"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="24"/>
-                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hev-ds-7hG" customClass="CVCalendarMenuView" customModule="CVCalendar">
@@ -508,6 +508,7 @@
                     </navigationItem>
                     <connections>
                         <segue destination="qK1-AS-zBG" kind="show" identifier="calendar" id="S5r-ke-O0D"/>
+                        <segue destination="kcE-ZW-qrr" kind="show" identifier="toForm" id="xsb-oG-Dce"/>
                     </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="e5x-5i-Ewu" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -586,6 +587,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VPT-gd-OLj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="183" y="1171"/>
+        </scene>
+        <!--Form View Controller-->
+        <scene sceneID="E8E-Q6-efa">
+            <objects>
+                <viewController id="kcE-ZW-qrr" customClass="CFormViewController" customModule="complicationsapp" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="CSk-T9-Kb5"/>
+                        <viewControllerLayoutGuide type="bottom" id="7II-uk-kHg"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Hbd-dC-zSq">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XXE-o3-S56" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1604" y="-292"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="wbc-00-6ZC">
