Added cprlog Form, fixed all titles so they show previous. Fixed segues. Got definitions down and basic template. Forms are good

--- a/complicationsapp/complicationsapp/Base.lproj/Main.storyboard
+++ b/complicationsapp/complicationsapp/Base.lproj/Main.storyboard
@@ -508,7 +508,7 @@
                     </navigationItem>
                     <connections>
                         <segue destination="qK1-AS-zBG" kind="show" identifier="calendar" id="S5r-ke-O0D"/>
-                        <segue destination="kcE-ZW-qrr" kind="show" identifier="toForm" id="xsb-oG-Dce"/>
+                        <segue destination="kcE-ZW-qrr" kind="show" identifier="toForm" id="fak-a7-J1c"/>
                     </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="e5x-5i-Ewu" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -604,7 +604,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XXE-o3-S56" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1604" y="-292"/>
+            <point key="canvasLocation" x="1604" y="-310"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="wbc-00-6ZC">
