start of day, going to work on showing full names

--- a/complicationsapp/complicationsapp/Base.lproj/Main.storyboard
+++ b/complicationsapp/complicationsapp/Base.lproj/Main.storyboard
@@ -588,6 +588,24 @@
             </objects>
             <point key="canvasLocation" x="183" y="1171"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="Lni-ja-bcU">
+            <objects>
+                <viewController id="aCb-8A-Ms0" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="52A-eF-nJF"/>
+                        <viewControllerLayoutGuide type="bottom" id="iLa-VR-fzX"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="eOc-oW-xmd">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Q1n-cy-KwY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1604" y="-1008"/>
+        </scene>
         <!--Form View Controller-->
         <scene sceneID="E8E-Q6-efa">
             <objects>
