--- a/complicationsapp/complicationsapp/Base.lproj/Main.storyboard
+++ b/complicationsapp/complicationsapp/Base.lproj/Main.storyboard
@@ -588,24 +588,6 @@
             </objects>
             <point key="canvasLocation" x="183" y="1171"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="Lni-ja-bcU">
-            <objects>
-                <viewController id="aCb-8A-Ms0" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="52A-eF-nJF"/>
-                        <viewControllerLayoutGuide type="bottom" id="iLa-VR-fzX"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="eOc-oW-xmd">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Q1n-cy-KwY" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1604" y="-1008"/>
-        </scene>
         <!--Form View Controller-->
         <scene sceneID="E8E-Q6-efa">
             <objects>
@@ -627,10 +609,74 @@
             </objects>
             <point key="canvasLocation" x="1604" y="-310"/>
         </scene>
+        <!--Confirmation Collection View Controller-->
+        <scene sceneID="KEA-Oz-9ex">
+            <objects>
+                <collectionViewController storyboardIdentifier="confirmation" id="6us-OZ-lij" customClass="ConfirmationCollectionViewController" customModule="complicationsapp" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="IvE-6t-hMj">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="cJ0-1Q-9Qi">
+                            <size key="itemSize" width="300" height="50"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="confirmation" id="TPM-Jg-iq7">
+                                <rect key="frame" x="150" y="0.0" width="300" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="300" height="50"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Key" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.40000000000000002" translatesAutoresizingMaskIntoConstraints="NO" id="uHe-Ro-TdQ">
+                                            <rect key="frame" x="0.0" y="0.0" width="263" height="50"/>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Value" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.40000000000000002" translatesAutoresizingMaskIntoConstraints="NO" id="hE2-Qr-OcB">
+                                            <rect key="frame" x="263" y="0.0" width="37" height="50"/>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="hE2-Qr-OcB" secondAttribute="bottom" id="2yn-I0-Obx"/>
+                                    <constraint firstAttribute="trailing" secondItem="hE2-Qr-OcB" secondAttribute="trailing" id="KUy-Jr-BLa"/>
+                                    <constraint firstAttribute="bottom" secondItem="uHe-Ro-TdQ" secondAttribute="bottom" id="h9D-W0-ta7"/>
+                                    <constraint firstItem="uHe-Ro-TdQ" firstAttribute="leading" secondItem="TPM-Jg-iq7" secondAttribute="leading" id="hcw-wQ-O6q"/>
+                                    <constraint firstItem="hE2-Qr-OcB" firstAttribute="leading" secondItem="uHe-Ro-TdQ" secondAttribute="trailing" id="iSv-r0-a65"/>
+                                    <constraint firstItem="hE2-Qr-OcB" firstAttribute="leading" secondItem="uHe-Ro-TdQ" secondAttribute="trailing" id="kX9-33-D8j"/>
+                                    <constraint firstItem="hE2-Qr-OcB" firstAttribute="top" secondItem="TPM-Jg-iq7" secondAttribute="top" id="rV5-1m-hgE"/>
+                                    <constraint firstItem="uHe-Ro-TdQ" firstAttribute="top" secondItem="TPM-Jg-iq7" secondAttribute="top" id="yVI-sp-kCE"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="iSv-r0-a65"/>
+                                    </mask>
+                                </variation>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="6us-OZ-lij" id="JEJ-yN-lue"/>
+                            <outlet property="delegate" destination="6us-OZ-lij" id="RRe-of-vMt"/>
+                        </connections>
+                    </collectionView>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EKe-hU-V92" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2315" y="-978"/>
+        </scene>
         <!--Confirmation-->
         <scene sceneID="Fex-kI-KBf">
             <objects>
-                <viewController title="Confirmation" id="xbx-yd-0td" sceneMemberID="viewController">
+                <viewController title="Confirmation" id="xbx-yd-0td" customClass="ConfirmationViewController" customModule="complicationsapp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="mL7-jI-WOv"/>
                         <viewControllerLayoutGuide type="bottom" id="yfO-iw-7t8"/>
@@ -641,7 +687,37 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hJI-tE-ksw">
                                 <rect key="frame" x="0.0" y="64" width="600" height="420"/>
+                                <subviews>
+                                    <view tag="42" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v35-rs-BnP">
+                                        <rect key="frame" x="40" y="72" width="520" height="348"/>
+                                        <color key="backgroundColor" red="0.85882352939999995" green="0.36862745099999999" blue="0.36078431370000003" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="340" id="WR3-Zf-pD7"/>
+                                        </constraints>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="WR3-Zf-pD7"/>
+                                            </mask>
+                                        </variation>
+                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Confirm submission for patient #" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hvE-Us-sOc">
+                                        <rect key="frame" x="30" y="20" width="540" height="22"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="18"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="hvE-Us-sOc" secondAttribute="trailing" constant="30" id="4qa-ce-FgL"/>
+                                    <constraint firstAttribute="bottom" secondItem="v35-rs-BnP" secondAttribute="bottom" id="GII-Fu-ncm"/>
+                                    <constraint firstItem="hvE-Us-sOc" firstAttribute="leading" secondItem="hJI-tE-ksw" secondAttribute="leading" constant="30" id="Sby-pP-TMF"/>
+                                    <constraint firstItem="v35-rs-BnP" firstAttribute="leading" secondItem="hJI-tE-ksw" secondAttribute="leading" constant="40" id="V5B-ND-esp"/>
+                                    <constraint firstItem="v35-rs-BnP" firstAttribute="top" secondItem="hvE-Us-sOc" secondAttribute="bottom" constant="30" id="bJg-UN-J1H"/>
+                                    <constraint firstAttribute="trailing" secondItem="v35-rs-BnP" secondAttribute="trailing" constant="40" id="e7x-mw-MPl"/>
+                                    <constraint firstItem="hvE-Us-sOc" firstAttribute="centerX" secondItem="hJI-tE-ksw" secondAttribute="centerX" id="tNr-Vx-CaU"/>
+                                    <constraint firstItem="hvE-Us-sOc" firstAttribute="top" secondItem="hJI-tE-ksw" secondAttribute="top" constant="20" id="ytE-g9-QX5"/>
+                                </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oyP-LP-exP">
                                 <rect key="frame" x="240" y="522" width="120" height="40"/>
@@ -659,6 +735,9 @@
                                         <integer key="value" value="20"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="submitLog:" destination="xbx-yd-0td" eventType="touchUpInside" id="jv6-Tx-nwU"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -671,7 +750,16 @@
                             <constraint firstAttribute="trailing" secondItem="hJI-tE-ksw" secondAttribute="trailing" id="kAV-We-mPM"/>
                             <constraint firstItem="yfO-iw-7t8" firstAttribute="top" secondItem="oyP-LP-exP" secondAttribute="bottom" constant="38" id="mpJ-FX-7br"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="Wgy-5K-Xfc"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <connections>
+                        <outlet property="confirmLabel" destination="hvE-Us-sOc" id="hPH-Ww-Ny2"/>
+                        <outlet property="viewContainer" destination="v35-rs-BnP" id="fBU-p8-5Hp"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BvG-4H-R0G" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
